feat: Updated some dependencies to the latest versions